# lazyide

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  demo.tape  install.ps1  install.sh  record-demo.sh
.github/workflows/: release.yml  tag.yml
docs/: ARCHITECTURE.md
src/: app.rs  keybinds.rs  lib.rs  lsp_client.rs  main.rs  persistence.rs  tab.rs  theme.rs  types.rs  util.rs
src/app/: core.rs  editor.rs  file_tree.rs  input.rs  input_handlers.rs  lsp.rs  search.rs
src/ui/: helpers.rs  mod.rs  overlays.rs
themes/: atom-one-light.json  aurora-flow.json  brackets-light-pro.json  chrome-ember.json  cobalt2.json  cyberpunk-neon.json  dark-mech.json  deep-sea.json  dracula.json  earth-tones.json  github-dark-default.json  github-dark-soft.json  github-light-default.json  hop-light.json  jetbrains-darcula.json  midnight-gold.json  monochrome.json  monokai-pro.json  nord.json  nordic-frost.json  obsidian-ember.json  obsidian-gold.json  one-dark-pro.json  one-monokai.json  pb-mixed-j-light.json  pb-mixed-j.json  synthwave-84.json  vscode-dark-modern.json  vscode-dark-plus.json  warp-dark.json
