[package]
name = "lazyide"
version = "0.3.86"
edition = "2024"

[dependencies]
arboard = "3.4"
include_dir = "0.7.4"
notify = "6"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui-textarea = { version = "0.8", features = ["search"] }
unicode-width = "0.2.0"
url = "2"

[dev-dependencies]
tempfile = "3"
